# UsbLinkStabilityTester

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
app/: main.cpp
docs/: protocol-layer.md  serial_frame.md  transport_design.md
include/usblink/core/: RingBuffer.hpp
include/usblink/protocol/: Packet.hpp  PacketEncoder.hpp  PayloadGenerator.hpp  ProtocolStats.hpp  SequenceTracker.hpp
include/usblink/runtime/: RuntimeSession.hpp
include/usblink/transport/: ISerialTransport.hpp  SerialConfig.hpp  SerialTypes.hpp
include/usblink/transport/posix/: PosixSerialTransport.hpp
src/common/: Dummy.cpp
src/core/: RingBuffer.cpp
src/protocol/: PacketEncoder.cpp  PayloadGenerator.cpp  SequenceTracker.cpp
src/runtime/: RuntimeSession.cpp
src/transport/posix/: PosixSerialTransport.cpp
tests/protocol/: PacketParserTests.cpp  PayloadGeneratorTests.cpp  SequenceTrackerTests.cpp
tests/runtime/: RuntimeSessionTests.cpp
